# goSynapse

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  go.mod  pyproject.toml
client/: auth.go  axon.go  base.go  cortex.go  parse.go  types.go
scripts/: health_check.py  storm_cli.py
src/gosynapse/: __init__.py  client.py  healthcheck.py  parse.py  types.py
tests/: __init__.py  test_client.py  test_healthcheck.py  test_parse.py
